# DRF_Habits_Tracker

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml
habits/: Dockerfile  requirements.txt
habits/accounts/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
habits/accounts/migrations/: 0001_initial.py  0002_remove_user_nickname_user_chat_id_user_last_update_and_more.py
habits/habits/: celery.py  settings.py  urls.py
habits/habits_app/: admin.py  models.py  paginators.py  permissons.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/habits_app/migrations/: 0001_initial.py  0002_habit_created_at.py  0002_remove_habit_only_useful_habit_frequency_and_more.py  0003_remove_habit_only_useful_habit_created_at.py  0004_remove_habit_only_useful_habit_frequency.py  0005_alter_habit_creator.py
habits/utils/: TG.py
habits/utils/management/commands/: fill_db.py
